# oidc-auth-demo

./: .gitignore  Cargo.toml  example.service.toml  readme.md
src/: config.rs  handlers.rs  main.rs  oidc.rs
src/components/: index.rs  mod.rs
src/models/: mod.rs  profile.rs
